# forge

./: .gitignore  .replit  DEPLOYMENT.md  README.md  build.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--FORGE-Local-Cloud-Builder-MVP-LM-Studio-Electron-Replit-A-production-ready-MVP-you-can--1762777235724_1762777235725.txt  Pasted-Build-Brief-FORGE-STRIKE-Code-Generation-Workbench-Mission-Build-a-Replit-style-app-that-turns--1762777552445_1762777552445.txt  Pasted-Windows-PowerShell-Copyright-C-Microsoft-Corporation-All-rights-reserved-Install-the-latest--1762807352391_1762807352392.txt
backend/: app.py  config.py  forge_backend.spec
backend/providers/: lmstudio.py  openai_cloud.py
backend/routers/: export.py  settings.py  upload.py  workspace.py
backend/services/: architect.py  conversational_orchestrator.py  orchestrator.py  settings_service.py
backend/storage/: db.py
backend/worker/: queue_worker.py
frontend/: vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: ArtifactsTab.jsx  BuildProcessTab.jsx  ChatTab.jsx  ConsoleTab.jsx  JobsTab.jsx  PreviewTab.jsx  SettingsModal.jsx
frontend/src/panes/: CenterPane.jsx  LeftPane.jsx  RightPane.jsx  TabbedPane.jsx
launcher/: main.js  package.json
