[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.121.1",
    "jinja2>=3.1.6",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "urllib3>=2.5.0",
    "uvicorn[standard]>=0.38.0",
]
